# PyEquations

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: python-package.yml
pyequations/: __init__.py  context_stack.py  decorators.py  generate_units_subs.py  inheritables.py  pyequations.py  utils.py
tests/: test2.py  test_context_stack.py  test_file.ipynb  test_pyequations.py  test_script.py
