[tool.poetry]
name = "pyequations"
version = "0.1.0"
description = "A Python package for solving a bunch of equations with a bunch of uknowns."
authors = ["Michael Bryant <mbryant2025@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.12"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
